Changes in 1.1.1:
- Fix deadlock in utp::OutputQueue when packet sending fails
- Fix bug causing scrape not to be done after first announce 
- Fix crash in DHT code caused by invalid addresses (269657)
- Fix crash in DHT code caused by unsynchronized access to a QSet (270127)

Changes in 1.1:
- Improve performance of chunk selection code when there are many chunks
- Fix crash in peer authentication cleanup (266622)
- Fix crash due to SIGBUS handler being overwritten by KDE's crash dialog system (266842)
- Be more lenient towards torrents with wrong announce-list field (268145)
- Fix root cause of SHA1HashGen crashes in 1.0 series (268162)

Changes in 1.1rc1:
- Fix bug in UPnP so that it works properly with D-Link DIR 635 routers
- Fix crash due to manipulating timers in the wrong thread (261903)
- Fix compiler warning in TimeEstimator (262618)
- Fix crash due to cleaning up timer in the wrong thread (260712)
- Fix crash due to not properly cleaning up Peers and everything related when switching to superseeding mode (261529)
- Fix invalid read in utp timer cleanup code (263800)
- Fix crashes at exit (264378, 256639)

Changes in 1.1beta1:
- Use UTF-8 as default codec in bt::Value::toString
- Make sure that SIGBUS signals caused by failed mmapped IO are dealt with properly (241598)
- Move UPnP library from ktorrent/libktupnp to libktorrent
- Add support for superseeding (171661)
- Add command line example ktcli showing how to use libktorrent
- Add TransportProtocol field to Peer::Stats
- Fix crash due to missing reset of Poll object in DHT listening thread (243603)
- Ensure that libktorrent works properly with bindv6only flag on (238688)
- Ensure that torrent names are not interpreted as directories (244418)
- Fix crash when cleaning up PeerConnectors (245796)
- Fix crash on exit when cleaning up UPnP requests
- UPnPRouter now retrieves the external IP of the router
- Fix bug causing error message not to show rich text (247680)
- Use libgcrypt for RC4 implementation